--- a/Project Codes/style.css
+++ b/Project Codes/style.css
@@ -1,5 +1,5 @@
 header1{
-	background-image: url('img/img4.jpg');
+    background-image: url('img/img4.jpg');
     background-position: center;
     background-size: cover;
     padding: 58px 0px 180px;
@@ -9,240 +9,240 @@ header1{
 
 }
 .header-content{
-	
-	width: 520px;
-	margin-top: 400px;
-	margin-left: 55%;
-	text-align: right;
-	
+    
+    width: 520px;
+    margin-top: 400px;
+    margin-left: 55%;
+    text-align: right;
+    
 }
 .header-top{
-	width: 100%
+    width: 100%
 }
 .logo{
-	width: 10%;
-	float: left;
-	
+    width: 10%;
+    float: left;
+    
 }
 .logo a h3{
-	font-size: 18px;
-	color: black;
-	text-transform: uppercase;
-	font-weight: 700;
-	text-decoration: none;
-	
+    font-size: 18px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-decoration: none;
+    
 
 
 }
 .logo a:hover{
-	text-decoration: none;
+    text-decoration: none;
 
 }
 .menu{
-	width: 90%;
-	float: left;
+    width: 90%;
+    float: left;
 }
 .menu ul{
-	margin : 0px;
-	padding: 0px;
-	text-align: right;
+    margin : 0px;
+    padding: 0px;
+    text-align: right;
 }
 .menu li{
-	display: inline-block;
-	list-style: none;
+    display: inline-block;
+    list-style: none;
 }
 .menu ul li{
-	display: inline-block;
-	list-style: none;
+    display: inline-block;
+    list-style: none;
 }
 .menu ul li a{
-	display: block;
-	padding: 10px 7px;
-	color: black;
-	text-transform: uppercase;
-	transition: .3s;
-	font-size: 16px;
-	font-weight:700
+    display: block;
+    padding: 10px 7px;
+    color: black;
+    text-transform: uppercase;
+    transition: .3s;
+    font-size: 16px;
+    font-weight:700
 }
 .menu ul li a:hover{
-	text-decoration: none;
-	background: #ccc;
-	color: #fff;
-	border-radius: 5px;
+    text-decoration: none;
+    background: #ccc;
+    color: #fff;
+    border-radius: 5px;
 
 }
 .header-content h2{
-	font-size: 71px;
-	font-weight: 700;
-	position: relative;
+    font-size: 71px;
+    font-weight: 700;
+    position: relative;
 }
 .header-content h2:after{
-	position: absolute;
-	content: '';
-	height: 4px;
-	width: 130px;
-	background: #000;
-	bottom: -2px;
-	right: 3px
+    position: absolute;
+    content: '';
+    height: 4px;
+    width: 130px;
+    background: #000;
+    bottom: -2px;
+    right: 3px
 
 }
 .header-content p{
-	font-size: 18px;
-	line-height: 1.7;
-	margin-top: 30px;
+    font-size: 18px;
+    line-height: 1.7;
+    margin-top: 30px;
 }
 
 .header-content a{
-	width: 274px;
-	border: 1px solid #000;
-	display: block;
-	text-align: center;
-	margin-top: 54px;
-	margin-left:45%;
-	color: black ;
-	padding: 8px 0px;
-	font-weight: 700;
+    width: 274px;
+    border: 1px solid #000;
+    display: block;
+    text-align: center;
+    margin-top: 54px;
+    margin-left:45%;
+    color: black ;
+    padding: 8px 0px;
+    font-weight: 700;
 
 }
 .header-content a:hover{
-	text-decoration: none
+    text-decoration: none
 }
 
 /* Who and why area start */
 .who_why{
-	padding: 100px 0px 120px 0px; 
+    padding: 100px 0px 120px 0px; 
 }
 .who_why_title{
-	text-align: center;
+    text-align: center;
 }
 .who_why_title h2{
-	font-size: 27px;
-	font-weight: 700;
-	margin-top: 23px;
+    font-size: 27px;
+    font-weight: 700;
+    margin-top: 23px;
 }
 .who_why_content{
-	margin-top: 85px;
-	text-align: center;
-	font-size: 16px;
-	line-height: 1.8;
+    margin-top: 85px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.8;
 }
 
 /* Who and why area finish */
 /* feature are strats */
 .feature_area{
-	background:#efefef ;
-	padding: 80px 0px 100px 0px;
+    background:#efefef ;
+    padding: 80px 0px 100px 0px;
 }
 .single-featurebox h4{
-	font-size: 18px;
-	font-weight: 700;
-	margin: 20px 0px;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 20px 0px;
 }
 .single-featurebox p{
-	font-size: 14px;
-	font-weight: 400;
-	opacity: .8;
-	line-height: 1.8;
+    font-size: 14px;
+    font-weight: 400;
+    opacity: .8;
+    line-height: 1.8;
 }
 /* feature area finish */
 /*  */
 .number_facts{
-	background-image: url('img/nbBack.png');
-	background-size:cover;
-	background-position: center;
-	padding: 100px 0px;
-	position: relative;
-	z-index: 1;
+    background-image: url('img/nbBack.png');
+    background-size:cover;
+    background-position: center;
+    padding: 100px 0px;
+    position: relative;
+    z-index: 1;
 
 }
 .number_facts:after{
-	position: absolute;
-	content: '';
-	width: 100%;
-	height: 100%;
-	opacity: .5;
-	background: #000;
-	top: 0;
-	left: 0;
-	z-index: -1;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    background: #000;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 .number_facts h2{
-	text-align: center;
-	font-size: 27px;
-	font-weight: 700;
-	color: #fff;
+    text-align: center;
+    font-size: 27px;
+    font-weight: 700;
+    color: #fff;
 }
 
 .nb_box{
-	width: 600px;
-	margin: 40px auto;
-	background-color: #ccc;
-	opacity: .9;
-	text-align: center;
-	padding: 50px 0px;
-	border-radius: 5px;
+    width: 600px;
+    margin: 40px auto;
+    background-color: #ccc;
+    opacity: .9;
+    text-align: center;
+    padding: 50px 0px;
+    border-radius: 5px;
 }
 .nb_box .col-md-6{
-	margin-top: 15px;
+    margin-top: 15px;
 }
 .nb_box .col-md-6 h4{
-	color: white;
-	font-size: 20px;
-	position: relative;
+    color: white;
+    font-size: 20px;
+    position: relative;
 }
 .nb_box .col-md-6 h4:after{
-	position: absolute;
-	content: '';
-	width: 100px;
-	height: 4px;
-	bottom: -15px;
-	background:#4d4c4b;
-	left: 50%;
-	margin-left: -50px; 
+    position: absolute;
+    content: '';
+    width: 100px;
+    height: 4px;
+    bottom: -15px;
+    background:#4d4c4b;
+    left: 50%;
+    margin-left: -50px; 
 
 }
 .nb_box .col-md-6 h6{
-	margin-top: 20px;
-	font-size: 20px;
-	color: white;
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
 }
 
 /*  */
 /*  */
 
 footer{
-	background: #000;
-	padding: 50px 0px;
+    background: #000;
+    padding: 50px 0px;
 
 
 }
 
 }
 footer input:focus{
-	outline: none;
+    outline: none;
 }
 footer textarea{
-	margin-top: 20px;
+    margin-top: 20px;
 }
 #send{
-	width: 200px;
-	margin-top: 30px;
-	color: white;
-	text-transform: uppercase;
-	border: nonel
+    width: 200px;
+    margin-top: 30px;
+    color: white;
+    text-transform: uppercase;
+    border: nonel
 }
 .footer-unicorn-title h2{
-	text-transform: uppercase;
-	color: white;
-	font-weight: 700;
-	font-size: 25px;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    font-size: 25px;
 
 }
 .footer-unicorn-title p{
-	margin: 20px 0px;
-	color: #ddd;
-	font-size: 14px;
-	opacity: .6;
+    margin: 20px 0px;
+    color: #ddd;
+    font-size: 14px;
+    opacity: .6;
 }
 * {
   margin: 0px;
@@ -319,30 +319,30 @@ form, .content {
 */
 
 body {
-	font-size: 15px;
+    font-size: 15px;
     line-height: 1.52;
     color: #717f86;
     font-size: 16px;
-	font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 .section-padding{
-	padding: 60px 0px;
+    padding: 60px 0px;
 }
 h1, h2, h3, h4, h5, h6{
     font-family: Open Sans, sans-serif;
@@ -373,13 +373,13 @@ Navigation bar
     font-weight: 700;
 }
 .navbar-nav > li > a{
-	padding: 0px;
-	margin: 10px 5px;
-	padding: 10px 15px;
+    padding: 0px;
+    margin: 10px 5px;
+    padding: 10px 15px;
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover
 {
-	color: #5FCF80;
+    color: #5FCF80;
 }
 
 .navbar-nav .active a{
@@ -389,15 +389,15 @@ Navigation bar
 }
 
 .btn-trial a{
-	background-color: #5FCF80;
-	border-radius: 25px;
-	color: #ffffff !important;
-	border: 1px solid #5FCF80;
+    background-color: #5FCF80;
+    border-radius: 25px;
+    color: #ffffff !important;
+    border: 1px solid #5FCF80;
 }
 .btn-trial a:hover, .btn-trial a:focus{
-	border: 1px solid #5FCF80;
-	background-color: #fff;
-	color: #5FCF80 !important;
+    border: 1px solid #5FCF80;
+    background-color: #fff;
+    color: #5FCF80 !important;
 }
 .navbar-default .navbar-brand {
     font-family: 'Dosis', sans-serif !important;
@@ -409,47 +409,47 @@ Navigation bar
     margin: 20px 0px;
 }
 .navbar-default .navbar-brand span{
-	font-weight: 100 !important;
+    font-weight: 100 !important;
 }
 .navbar {
     margin-bottom: 0px;
 }
 .padding-zero{
-	padding: 0px;
+    padding: 0px;
 }
 .mart20{
-	margin-top: 20px;
+    margin-top: 20px;
 }
 /***********************************
 Banner
 ************************************/
 .banner{
-	background: url('../img/l2.jpg') no-repeat center top;
+    background: url('../img/l2.jpg') no-repeat center top;
     background-size: cover;
-	min-height: 580px;
+    min-height: 580px;
     position: relative;
 }
 .bg-color{
-	background-color: RGBA(12, 11, 11, 0.82);
-	min-height: 580px;
+    background-color: RGBA(12, 11, 11, 0.82);
+    min-height: 580px;
 }
 .text-dec{
-	font-size: 24px;
-	padding: 10px 20px;
+    font-size: 24px;
+    padding: 10px 20px;
     margin: 15px 0;
-	text-transform: uppercase;
+    text-transform: uppercase;
     color: #fff;
 }
 .text-border{
-	border: 5px solid #5FCF80;
-	display: inline-block;
-	margin-top: 150px;
+    border: 5px solid #5FCF80;
+    display: inline-block;
+    margin-top: 150px;
 }
 .intro-para{
-	font-family: 'Alegreya Sans', sans-serif;
-	font-size: 45px;
-	color: #fff;
-	margin-top: 30px;
+    font-family: 'Alegreya Sans', sans-serif;
+    font-size: 45px;
+    color: #fff;
+    margin-top: 30px;
 }
 .quote .btn{
     background-color: 
@@ -552,16 +552,16 @@ Banner
 Features
 ************************************/
 h2{
-	font-size: 24px;
-	padding-bottom: 15px;
+    font-size: 24px;
+    padding-bottom: 15px;
 }
 .bottom-line{
-	width: 25px;
-	height: 3px;
-	background-color: rgb(99, 122, 145);
+    width: 25px;
+    height: 3px;
+    background-color: rgb(99, 122, 145);
 }
 .fea{
-	margin-top: 25px;
+    margin-top: 25px;
 }
 .fea-img {
   width: 20%;
@@ -813,7 +813,7 @@ Contact Us
     background: #fafafa;
     border: 1px solid rgba(119, 81, 81, 0.34);
     width: 100%;
-	margin-bottom: 15px;
+    margin-bottom: 15px;
     border-radius: 0;
     
 }
@@ -858,14 +858,14 @@ Contact Us
 }
 
 #sendmessage.show, #errormessage.show, .show {
-	display:block;
+    display:block;
 }
 /***********************************
 Footer
 ************************************/
 .footer {
     padding: 60px 0 20px;
-    background: #111;
+    background: #ff5a7d;
     color: #ccc;
 }
 .footer a {
@@ -873,10 +873,10 @@ Footer
 }
 
 .footer h3{
-	font-weight: 300;
-	letter-spacing: 0.05em;
-	margin: 0 0 40px;
-	font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 0.05em;
+    margin: 0 0 40px;
+    font-size: 24px;
 }
 .footer .form-control {
     border-radius: 30px;
@@ -917,14 +917,14 @@ Footer
     color: #fff;
 }
 .btn-submit{
-	padding: 14px 12px;
-	border-radius: 50px;
-	text-transform: uppercase;
+    padding: 14px 12px;
+    border-radius: 50px;
+    text-transform: uppercase;
     background-color: #5fcf80;
     color: #fff;
 }
 .btn-submit i{
-	padding-left: 8px;
+    padding-left: 8px;
 }
 
 .btn-sec {
